necklaces fixed on mobile

--- a/src/components/Necklaces/Details/Detail.module.scss
+++ b/src/components/Necklaces/Details/Detail.module.scss
@@ -4,20 +4,29 @@
   justify-content: space-evenly;
   align-items: center;
   font-family: $font-raleway;
-  color: #fff;
-  background-color: #2e2d2d;
+  color: $white;
+  background-color: $background;
 
   @include responsive("laptop") {
     height: 100vh;
   }
 
-  @include responsive("mdMb") {
-    height: 100vh;
-    min-height: 100%;
-  }
-
-  @include responsive("smMb") {
+  @include responsive("xlMb") {
     height: 100%;
+    min-height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: flex-start;
+  }
+}
+
+.wrapper {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+
+  @include responsive("xlMb") {
+    margin-top: 3.2rem;
   }
 }
 
@@ -32,7 +41,12 @@
   transition: opacity 0.3s;
 
   @include responsive("xlMb") {
-   
+    top: 50%;
+    position: fixed;
+  }
+
+  @include responsive("mdMb") {
+    position: fixed;
   }
 }
 
@@ -54,6 +68,14 @@
   @include responsive("xlMb") {
     right: 1rem;
   }
+
+  @include responsive("mdMb") {
+    right: 0.8rem;
+  }
+
+  @include responsive("smMb") {
+    right: 0.5rem;
+  }
 }
 
 .previousButton {
@@ -71,6 +93,14 @@
   @include responsive("xlMb") {
     left: 1rem;
   }
+
+  @include responsive("mdMb") {
+    left: 0.8rem;
+  }
+
+  @include responsive("smMb") {
+    left: 0.5rem;
+  }
 }
 
 .nextButton {
@@ -86,12 +116,12 @@
     font-size: 5rem;
   }
 
-  @include responsive("mdMb") {
-    font-size: 5rem;
+  @include responsive("xlMb") {
+    font-size: 3rem;
   }
 
   @include responsive("smMb") {
-    font-size: 4rem;
+    font-size: 2.8rem;
   }
 }
 
@@ -111,7 +141,11 @@
   }
 
   @include responsive("xlMb") {
-    font-size: 5rem;
+    font-size: 3rem;
+  }
+
+  @include responsive("smMb") {
+    font-size: 2.8rem;
   }
 }
 
@@ -138,7 +172,7 @@
   @include responsive("xlMb") {
     width: 2.2rem;
     height: 2.2rem;
-    top: 7rem;
+    top: 8.5rem;
     right: 3rem;
   }
 }
@@ -194,15 +228,17 @@
   @include responsive("xlMb") {
     display: block;
     font-size: 4rem;
-    margin-top: 2rem;
+    margin-bottom: 3.5rem;
   }
 
   @include responsive("mdMb") {
     font-size: 3rem;
+    margin-bottom: 1.5rem;
   }
 
   @include responsive("smMb") {
     font-size: 2.5rem;
+    margin-bottom: 1rem;
   }
 }
 
@@ -271,7 +307,7 @@
   width: 45rem;
 
   @include responsive("laptop") {
-    width: 35rem;
+    width: 38vw;
   }
 
   @include responsive("sm") {
@@ -283,13 +319,11 @@
   }
 
   @include responsive("mdMb") {
-    width: 35rem;
+    width: 33rem;
   }
 
   @include responsive("smMb") {
-    width: 30rem;
-  
-    // overflow-y: auto;
+    width: 28rem;
   }
 }
 
@@ -341,13 +375,12 @@
   }
 
   @include responsive("xlMb") {
-    // margin-bottom: 2rem;
+    margin-bottom: 2rem;
     font-size: 1.5rem;
     padding: 1rem;
   }
 
   @include responsive("mdMb") {
-    margin-bottom: 2rem;
     font-size: 1.4rem;
     padding: 1.5rem;
   }
